--- a/3-driver/02_driver_module_gpio/04_led_drv_seperate_template/Makefile
+++ b/3-driver/02_driver_module_gpio/04_led_drv_seperate_template/Makefile
@@ -7,7 +7,7 @@
 # 注意: 不同的开发板不同的编译器上述3个环境变量不一定相同,
 #       请参考各开发板的高级用户使用手册
 
-KERN_DIR = /home/book/100ask_roc-rk3399-pc/linux-4.4
+KERN_DIR = /home/book/100ask_imx6ull-sdk/Linux-4.9.88
 
 all:
 	make -C $(KERN_DIR) M=`pwd` modules 
@@ -23,7 +23,6 @@ clean:
 # ab-y := a.o b.o
 # obj-m += ab.o
 
-
-
-obj-m += leddrv.o chip_demo_gpio.o board_A_led.o
-
+# leddrv.c board_demo.c 编译成 100ask.ko
+100ask_led-y := leddrv.o chip_demo_gpio_opr.o board_A_led_resource.o
+obj-m	+= 100ask_led.o
