--- a/3-driver/02_driver_module_gpio/06_led_drv_device_tree_template/Makefile
+++ b/3-driver/02_driver_module_gpio/06_led_drv_device_tree_template/Makefile
@@ -7,7 +7,7 @@
 # 注意: 不同的开发板不同的编译器上述3个环境变量不一定相同,
 #       请参考各开发板的高级用户使用手册
 
-KERN_DIR = /home/book/100ask_roc-rk3399-pc/linux-4.4
+KERN_DIR = /home/book/100ask_imx6ull-sdk/Linux-4.9.88
 
 all:
 	make -C $(KERN_DIR) M=`pwd` modules 
@@ -25,5 +25,5 @@ clean:
 
 
 
-obj-m += leddrv.o chip_demo_gpio.o
+obj-m += leddrv.o chip_demo_gpio_opr.o
 
