--- a/3-driver/03_button_drv/02_button_drv_template/Makefile
+++ b/3-driver/03_button_drv/02_button_drv_template/Makefile
@@ -16,7 +16,7 @@ all:
 clean:
 	make -C $(KERN_DIR) M=`pwd` modules clean
 	rm -rf modules.order
-	rm -f ledtest
+	rm -f button_test
 
 # 参考内核源码drivers/char/ipmi/Makefile
 # 要想把a.c, b.c编译成ab.ko, 可以这样指定:
