--- a/3-driver/04_gpio_irq/02_read_key_irq/Makefile
+++ b/3-driver/04_gpio_irq/02_read_key_irq/Makefile
@@ -7,15 +7,16 @@
 # 注意: 不同的开发板不同的编译器上述3个环境变量不一定相同,
 #       请参考各开发板的高级用户使用手册
 
-KERN_DIR = # 板子所用内核源码的目录
+KERN_DIR = /home/book/100ask_imx6ull-sdk/Linux-4.9.88
 
 all:
 	make -C $(KERN_DIR) M=`pwd` modules 
-
+	$(CROSS_COMPILE)gcc -o button_test button_test.c 
 clean:
 	make -C $(KERN_DIR) M=`pwd` modules clean
 	rm -rf modules.order
-
+	rm -f button_test
+	
 # 参考内核源码drivers/char/ipmi/Makefile
 # 要想把a.c, b.c编译成ab.ko, 可以这样指定:
 # ab-y := a.o b.o
