--- a/3-driver/04_gpio_irq/03_read_key_irq_circle_buffer/Makefile
+++ b/3-driver/04_gpio_irq/03_read_key_irq_circle_buffer/Makefile
@@ -7,7 +7,8 @@
 # 注意: 不同的开发板不同的编译器上述3个环境变量不一定相同,
 #       请参考各开发板的高级用户使用手册
 
-KERN_DIR =  # 板子所用内核源码的目录
+
+KERN_DIR = /home/book/100ask_imx6ull-sdk/Linux-4.9.88
 
 all:
 	make -C $(KERN_DIR) M=`pwd` modules 
