--- a/3-driver/05_mmap/Makefile
+++ b/3-driver/05_mmap/Makefile
@@ -11,17 +11,11 @@ KERN_DIR = /home/book/100ask_imx6ull-sdk/Linux-4.9.88
 
 all:
 	make -C $(KERN_DIR) M=`pwd` modules 
-	$(CROSS_COMPILE)gcc -o button_test button_test.c
+	$(CROSS_COMPILE)gcc -o hello_drv_test hello_drv_test.c 
+
 clean:
 	make -C $(KERN_DIR) M=`pwd` modules clean
-	rm -rf modules.order  button_test
+	rm -rf modules.order
+	rm -f hello_drv_test
 
-# 参考内核源码drivers/char/ipmi/Makefile
-# 要想把a.c, b.c编译成ab.ko, 可以这样指定:
-# ab-y := a.o b.o
-# obj-m += ab.o
-
-
-
-obj-m += gpio_key_drv.o
-
+obj-m	+= hello_drv.o
